# weatherpy

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: release.yml  test.yml
src/weatherpy/: __main__.py  api.py  config.py
src/weatherpy/api/: comm.py  exceptions.py  models.py  urls.py
src/weatherpy/presenter/: current.py  forecast.py  symbols.py  utils.py
src/weatherpy/ui/: cli.py  config.py
tests/: test_version.py
tests/test_ui/: test_config.py
