[tool.poetry]
name = "weatherpy"
version = "0.1.0"
description = "CLI app for getting current and forecast weather data."
authors = ["mikegorski <mike.gorski96@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "weatherpy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
cyclopts = "^2.2.0"
ip2geotools = "^0.1.6"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.0"
pyright = "^1.1.350"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
wthr = "weatherpy.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["F", "E", "W", "I001"]

[tool.pyright]
venvPath = "C:\\Users\\mikeg\\AppData\\Local\\pypoetry\\Cache\\virtualenvs"
venv = "weatherpy-TpM6Q3pq-py3.11"
